# python_mipt_dafe_tasks

./: .coverage  .gitignore  CMakePresets.json  cl.py  contest.py  et --hard 5a17f88  requirements-ci.txt  requirements.txt  savva  task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  test.txt
.github/workflows/: trying.ipynb
conditions/lesson05/: tasks.md
conditions/lesson06/: tasks.md
conditions/lesson11/: task.md
conditions/lesson12/: exam.ipynb  exam3.py  exams.py  exams2.py  exams4.py  exams5.py
conditions/sem02/lesson07/: tasks.md
homeworks/hw1/: aggregate_segmentation.py  backoff.py  cache.py  convert_exception.py  import random.ini  test_hw1_1.py  test_hw1_tasks_cache.py
lesson03/: practice.ipynb
solutions/: def flip bits in range.txt
solutions/lesson02/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py
solutions/lesson03/: task1.py  task2.py  task3.py
solutions/lesson04/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py
solutions/lesson05/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py
solutions/lesson06/: task1.py  task2.py  task3.py  task4.py
solutions/lesson08/: task1.py  task2.py
solutions/lesson11/: task1.py
solutions/lesson12/: task1.py  task2.py  task3.py
solutions/sem01/lesson06/: CMakeLists.txt  task1.py  task2.py  task3.py  task4.py
tests/: test_lesson02_tasks.py  test_lesson03_tasks.py  test_lesson04_tasks.py  test_lesson05_tasks.py  test_lesson06_tasks.py  test_lesson08_tasks.py  test_lesson11_tasks.py  test_lesson12_tasks.py
tests_hw/: cache_test.py  exception_test.py  segments_test.py  test_hw1.py  test_hw1_1.py  test_hw1_task1.py  test_hw1_tasks.py  test_hw1_tasks_cache.py  test_hw1_tasks_segment.py
(+60 files in other folders)
